crates/al-parser/grammar.js
    source_file: ($) => repeat($._object_declaration),

    _object_declaration: ($) =>
      choice(
        $.table_declaration,
        $.table_extension_declaration,
        $.page_declaration,
        $.page_extension_declaration,
        $.codeunit_declaration,
        $.report_declaration,
        $.enum_declaration,
        $.enum_extension_declaration,
        $.xmlport_declaration,
        $.query_declaration,
        $.interface_declaration,
        $.permissionset_declaration,
        $.controladdin_declaration
      ),

    // ─── Object declarations ─────────────────────────────────

    table_declaration: ($) =>
      seq(kw("table"), $.integer_literal, $._object_name, "{", optional($._table_body), "}"),

    page_declaration: ($) =>
      seq(kw("page"), $.integer_literal, $._object_name, "{", optional($._object_body), "}"),

    codeunit_declaration: ($) =>
      seq(kw("codeunit"), $.integer_literal, $._object_name, optional($.implements_clause), "{", optional($._object_body), "}"),

    enum_declaration: ($) =>
      seq(
        kw("enum"),
        $.integer_literal,
        $._object_name,
        optional($.implements_clause),
        "{",
        optional($._enum_body),
        "}"
      ),

    _object_name: ($) => choice($.identifier, $.quoted_identifier),

    // implements IFoo, IBar
    _table_body: ($) =>
      repeat1(
        choice(
          $.property,
          $.fields_section,
          $.keys_section,
          $.fieldgroups_section,
          $.trigger_declaration,
          $.procedure_declaration,
          $.var_section
        )
      ),

    _object_body: ($) =>
      repeat1(
        choice(
          $.property,
          $.trigger_declaration,
          $.procedure_declaration,
          $.var_section,
          $.fields_section,
          $.keys_section,
          $.fieldgroups_section,
          $.layout_section,
          $.actions_section,
          $.dataset_section,
          $.requestpage_section,
          $.labels_section,
          $._named_section
        )
      ),

    _enum_body: ($) =>
      repeat1(choice($.property, $.enum_value_declaration)),

    property: ($) =>
      seq(
        field("name", $.property_name),
        "=",
        field("value", $._property_value),
        ";"
      ),

    _property_value: ($) =>
      choice(
        $.table_relation_expression,
        $.calc_formula_expression,
        $.table_view_expression,
        $.dataitem_link_expression,
        $.decimal_places_value,
        $.property_option_value,
        $.string_literal,
        $.integer_literal,
        $.decimal_literal,
        $.temporal_literal,
        $.boolean_literal,
        $.identifier,
        $.quoted_identifier,
        // Enum-like: Sorting::Ascending
        seq($.identifier, "::", $.identifier),
        // Property list: field1, field2
        commaSep1(choice($.identifier, $.quoted_identifier))
      ),

    fields_section: ($) =>
      seq(kw("fields"), "{", repeat($.field_declaration), "}"),

    field_declaration: ($) =>
      seq(
        kw("field"),
        "(",
        field("id", $.integer_literal),
        ";",
        field("name", choice($.identifier, $.quoted_identifier)),
        ";",
        field("type", $._type_reference),
        ")",
        "{",
        repeat(choice($.property, $.trigger_declaration)),
        "}"
      ),

    // ─── Keys section (tables) ───────────────────────────────

    keys_section: ($) =>
      seq(kw("keys"), "{", repeat($.key_declaration), "}"),

    key_declaration: ($) =>
      seq(
        kw("key"),
        "(",
        field("name", choice($.identifier, $.quoted_identifier)),
        ";",
        commaSep1(choice($.identifier, $.quoted_identifier)),
        ")",
        "{",
        repeat($.property),
        "}"
      ),

    // ─── FieldGroups section ─────────────────────────────────

    enum_value_declaration: ($) =>
      seq(
        kw("value"),
        "(",
        field("id", $.integer_literal),
        ";",
        field("name", choice($.identifier, $.quoted_identifier)),
        ")",
        "{",
        repeat($.property),
        "}"
      ),

    // ─── Layout / actions / dataset (pages, reports) ─────────

    procedure_declaration: ($) =>
      seq(
        repeat($.attribute),
        optional(field("access", choice(kw("local"), kw("internal"), kw("protected")))),
        kw("procedure"),
        field("name", choice($.identifier, $.quoted_identifier)),
        "(",
        field("parameters", optional($.parameter_list)),
        ")",
        optional(field("return_type", $.return_type)),
        optional(";"),
        optional(field("vars", $.var_section)),
        field("body", $.block)
      ),

    trigger_declaration: ($) =>
      seq(
        repeat($.attribute),
        kw("trigger"),
        field("name", choice($.identifier, $.quoted_identifier)),
        "(",
        field("parameters", optional($.parameter_list)),
        ")",
        optional(field("return_type", $.return_type)),
        optional(field("vars", $.var_section)),
        field("body", $.block)
      ),

    // AL uses semicolons to separate parameters
    parameter_list: ($) => semiSep1($.parameter),

    parameter: ($) =>
      seq(
        optional(kw("var")),
        field("name", choice($.identifier, $.quoted_identifier)),
        ":",
        field("type", $._type_reference)
      ),

    return_type: ($) =>
      choice(
        seq(":", field("type", $._type_reference)),
        seq(
          field("name", choice($.identifier, $.quoted_identifier)),
          ":",
          field("type", $._type_reference)
        )
      ),

    // Interface signatures support both `: Type` and `ReturnName: Type`.
    var_section: ($) =>
      seq(kw("var"), repeat($.variable_declaration)),

    variable_declaration: ($) =>
      seq(
        repeat($.attribute),
        commaSep1(field("name", choice($.identifier, $.quoted_identifier))),
        ":",
        field("type", $._type_reference),
        ";"
      ),

    // ─── Block ───────────────────────────────────────────────
    // Pascal-style: semicolons are separators between statements.
    // We use optional ";" after each statement for robustness.

    block: ($) =>
      prec.right(seq(
        kw("begin"),
        repeat(seq($._statement, optional(";"))),
        kw("end"),
        optional(";")
      )),

    // ─── Statements ──────────────────────────────────────────
    // Statements do NOT include trailing semicolons — the block handles that.

    _statement: ($) =>
      choice(
        $.assignment_statement,
        $.compound_assignment_statement,
        $.expression_statement,
        $.if_statement,
        $.case_statement,
        $.for_statement,
        $.while_statement,
        $.repeat_statement,
        $.exit_statement,
        $.with_statement,
        $.block
      ),

    assignment_statement: ($) =>
      seq(field("target", $._expression), ":=", field("value", $._expression)),

    expression_statement: ($) => prec(-1, $._expression),

    if_statement: ($) =>
      prec.right(
        seq(
          kw("if"),
          field("condition", $._expression),
          kw("then"),
          optional(field("consequence", $._statement)),
          optional(seq(kw("else"), field("alternative", $._statement)))
        )
      ),

    case_statement: ($) =>
      seq(
        kw("case"),
        field("expression", $._expression),
        kw("of"),
        repeat(seq($.case_branch, optional(";"))),
        optional(seq(kw("else"), repeat(seq($._statement, optional(";"))))),
        kw("end")
      ),

    case_branch: ($) =>
      seq(commaSep1($._expression), ":", $._statement),

    for_statement: ($) =>
      seq(
        kw("for"),
        field("variable", $._expression),
        ":=",
        field("from", $._expression),
        choice(kw("to"), kw("downto")),
        field("to", $._expression),
        kw("do"),
        field("body", $._statement)
      ),

    while_statement: ($) =>
      seq(
        kw("while"),
        field("condition", $._expression),
        kw("do"),
        field("body", $._statement)
      ),

    repeat_statement: ($) =>
      seq(
        kw("repeat"),
        repeat(seq($._statement, optional(";"))),
        kw("until"),
        field("condition", $._expression)
      ),

    exit_statement: ($) =>
      prec.right(seq(kw("exit"), optional(seq("(", optional($._expression), ")")))),

    _expression: ($) => $.conditional_expression,

    and_expression: ($) =>
      choice(
        $.comparison_expression,
        prec.left(
          2,
          seq(
            field("left", $.and_expression),
            field("operator", kw("and")),
            field("right", $.comparison_expression)
          )
        )
      ),

    comparison_expression: ($) =>
      choice(
        $.range_expression,
        prec.left(
          3,
          seq(
            field("left", $.range_expression),
            field("operator", choice("=", "<>", "<", ">", "<=", ">=", kw("in"))),
            field("right", $.range_expression)
          )
        )
      ),

    additive_expression: ($) =>
      choice(
        $.multiplicative_expression,
        prec.left(
          5,
          seq(
            field("left", $.additive_expression),
            field("operator", choice("+", "-")),
            field("right", $.multiplicative_expression)
          )
        )
      ),

    _postfix_expression: ($) =>
      choice(
        $.method_call,
        $.member_access,
        $.array_access,
        $.primary_expression
      ),

    method_call: ($) =>
      prec.left(
        9,
        seq(
          field("object", $._postfix_expression),
          ".",
          field("method", choice($.identifier, $.quoted_identifier)),
          "(",
          field("arguments", optional($.argument_list)),
          ")"
        )
      ),

    primary_expression: ($) =>
      choice(
        $.identifier,
        $.quoted_identifier,
        $.builtin_object_reference,
        $.string_literal,
        $.integer_literal,
        $.decimal_literal,
        $.temporal_literal,
        $.boolean_literal,
        $.list_literal,
        $.parenthesized_expression,
        $.function_call,
        $.qualified_enum_value,
        $.qualified_object_reference
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    function_call: ($) =>
      prec(
        7,
        seq(
          field("function", choice($.identifier, $.quoted_identifier)),
          "(",
          field("arguments", optional($.argument_list)),
          ")"
        )
      ),

    argument_list: ($) => commaSep1($._expression),

    // ─── Type references ─────────────────────────────────────

    _type_reference: ($) =>
      choice(
        $.sized_type,
        $.simple_type,
        $.record_type,
        $.codeunit_type,
        $.page_type,
        $.testpage_type,
        $.report_type,
        $.testrequestpage_type,
        $.query_type,
        $.xmlport_type,
        $.enum_type,
        $.interface_type,
        $.dictionary_type,
        $.list_type,
        $.array_type,
        $.option_type,
        $.label_type,
        $.dotnet_type
      ),

    // Type references allowed inside generic container declarations such as
    // `List of [T]` and `Dictionary of [K, V]`. Excludes comma-heavy forms
    // (`option` and `label`) to avoid ambiguity with generic separators.
    simple_type: ($) => prec(-1, choice($.identifier, $.quoted_identifier)),

    sized_type: ($) =>
      prec(1, seq(
        field("base", $.identifier),
        "[",
        field("size", $.integer_literal),
        "]"
      )),

    record_type: ($) =>
      seq(
        kw("record"),
        field("table", choice($.identifier, $.quoted_identifier)),
        optional(kw("temporary"))
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    quoted_identifier: ($) => /"[^"]*"/,

    // Used in interface method signatures with named return values:
    // `procedure Foo() ReturnVar: Code[20]`
    string_literal: ($) => /'([^']|'')*'/,

    integer_literal: ($) => /\d+/,

    boolean_literal: ($) => token(prec(1, choice(
      /[tT][rR][uU][eE]/,
      /[fF][aA][lL][sS][eE]/
    ))),
